logs/yixinpylib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yixinPyLib'...
Listing './lib/python3.5/site-packages/yixinPyLib/Library'...
Compiling './lib/python3.5/site-packages/yixinPyLib/Library/AndroidMethod.py'...
***   File "./lib/python3.5/site-packages/yixinPyLib/Library/AndroidMethod.py", line 18
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yixinPyLib/Library/AppMethod.py'...
***   File "./lib/python3.5/site-packages/yixinPyLib/Library/AppMethod.py", line 17
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/yixinPyLib/Library/IosMethod.py'...
***   File "./lib/python3.5/site-packages/yixinPyLib/Library/IosMethod.py", line 15
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/yixinPyLib/Library/SeleniumMethod.py'...
***   File "./lib/python3.5/site-packages/yixinPyLib/Library/SeleniumMethod.py", line 37
    print traceback.print_exc()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yixinPyLib/LocalMethod'...
Compiling './lib/python3.5/site-packages/yixinPyLib/LocalMethod/UserClass.py'...
***   File "./lib/python3.5/site-packages/yixinPyLib/LocalMethod/UserClass.py", line 63
    print a[u'data']
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yixinPyLib/demo'...
Compiling './lib/python3.5/site-packages/yixinPyLib/demo/hello.py'...
***   File "./lib/python3.5/site-packages/yixinPyLib/demo/hello.py", line 11
    print u'欢迎使用易鑫金融质量管理部Python公共库'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yixinPyLib/testcaseupload'...
Compiling './lib/python3.5/site-packages/yixinPyLib/testcaseupload/uploadFile.py'...
***   File "./lib/python3.5/site-packages/yixinPyLib/testcaseupload/uploadFile.py", line 79
    print l.decode('utf-8').encode('gbk', 'ignore')
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yixinPyLib/testcaseupload/uploadTestcase.py'...
***   File "./lib/python3.5/site-packages/yixinPyLib/testcaseupload/uploadTestcase.py", line 79
    print params
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yixinPyLib-0.0.58.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
